Mon Mar 12 23:19:56 GMT 2012  Olly Betts <olly@survex.com>

	* docs/admin_notes.rst: Mention that postlist and termlist tables hold
	  value info too for chert.  Mention that xapian-chert-update was
	  removed in 1.3.0.  Mention that you need to use copydatabase from
	  1.2.x to convert flint to chert.  Trunk already has equivalent
	  changes.

Thu Mar 08 13:35:48 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* docs/index.rst: Add link to new "getting started" guide.

Thu Mar 08 02:05:19 GMT 2012  Olly Betts <olly@survex.com>

	* NEWS,configure.ac: Update for 1.2.9.

Tue Mar 06 11:07:44 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* matcher/: Fix issue with AND, OR, and XOR queries against a database
	  with no documents in it - this was causing a divide by zero, which led
	  to MSet::get_matches_estimated() reporting 2147483648 on i386.
	* tests/api_backend.cc: Add regression test emptydb1.

Tue Mar 06 11:00:43 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* tests/harness/testsuite.cc: Address new warnings from GCC 4.6.

Tue Mar 06 10:56:09 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* include/xapian/database.h: Improve documentation of Database::close()
	  and ~WritableDatabase().

Wed Feb 29 10:33:28 GMT 2012  Olly Betts <olly@survex.com>

	* NEWS: Update from ChangeLog.

Wed Feb 29 10:25:18 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* include/xapian/matchspy.h,include/xapian/postingsource.h,
	  include/xapian/weight.h: Document that you can define a static
	  operator delete method in your subclass if deallocation needs to be
	  handled specially.  (Closes ticket#554)

Mon Jan 23 12:39:44 GMT 2012  Olly Betts <olly@survex.com>

	* NEWS: Update from ChangeLog.

Sun Jan 22 06:21:08 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* net/remoteconnection.cc: Include "safesysstat.h" for fstat().
