@@ -112,7 +112,7 @@ eval {
 };
 ok($@);
 ok(ref($@), "Search::Xapian::InvalidArgumentError");
-ok(UNIVERSAL::isa($@, 'Search::Xapian::Error'));
+ok($@->isa('Search::Xapian::Error'));
 ok($@->get_msg, "Language code gibberish unknown");
 ok( "$@" =~ /^Exception: Language code gibberish unknown(?: at \S+ line \d+\.)?$/ );
 
